@@ -243,7 +243,7 @@ case, or else POLLERR.
  
  	pollfds[i].revents = revents;
        }
-@@ -511,6 +547,12 @@ _hurd_select (int nfds,
+@@ -511,6 +547,20 @@ _hurd_select (int nfds,
  	    if ((type & SELECT_RETURNED) == 0)
  	      type = 0;
  
@@ -251,7 +251,15 @@ case, or else POLLERR.
 +	       readiness of the erring object and the next call hopefully
 +	       will get the error again.  */
 +	    if (type & SELECT_ERROR)
-+	      type = SELECT_ALL;
++	      {
++		type = 0;
++		if (readfds != NULL && FD_ISSET (i, readfds))
++		  type |= SELECT_READ;
++		if (writefds != NULL && FD_ISSET (i, writefds))
++		  type |= SELECT_WRITE;
++		if (exceptfds != NULL && FD_ISSET (i, exceptfds))
++		  type |= SELECT_URG;
++	      }
 +
  	    if (type & SELECT_READ)
  	      ready++;
