@@ -6,6 +6,8 @@ glibc (2.19-12) UNRELEASED; urgency=medium
   * patches/hurd-i386/local-libpthread-stacksize.diff: New patch to make
     libpthread stacks size default to 8MiB like on Linux, to avoid surprises
     with packages which assume the Linuxish default.
+  * patches/hurd-i386/tg-poll_errors_fixes.diff: Update patch, fixes
+    select returned value in case of errors. Closes: #764840.
 
   [ Petr Salinger ]
   * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
